[package]
name = "ssrkit-macros"
version = "0.1.1"
edition = "2021"
authors = ["Jerome Leong <jeromeleong1998@gmail.com>"]
description = "Macros for SsrKit "
repository = "https://github.com/jeromeleong/ssrkit-macros"
license = "MIT"
keywords = ["macros","ssrkit"]
categories = ["development-tools::procedural-macro-helpers"]

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.0", features = ["full"] }
quote = "1.0"
proc-macro2 = "1.0"
serde_json = "1.0"